--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Blog Posts"
-    url: /year-archive/
+    url: /blog/
 
   - title: "Projects"
     url: /projects/
