--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /projects/
 
   - title: "Leetcode Solutions"
-    url: /leetcode-solutions/    
+    url: /leetcodesolutions/    
     
   - title: "CV"
     url: /cv/
